force-app/main/default/objects/FieloPLT__Redemption__c/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <label>Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>