force-app/main/default/objects/FieloPLT__Redemption__c/fields/AddressPostalCode__c.field-meta.xml
<CustomField>
    <fullName>AddressPostalCode__c</fullName>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>