force-app/main/default/objects/FieloPLT__Redemption__c/fields/Cash_Points__c.field-meta.xml
<CustomField>
    <fullName>Cash_Points__c</fullName>
    <description>Number of Cash Points Members can have and redeem</description>
    <inlineHelpText>Number of Cash Points Members can have and redeem</inlineHelpText>
    <label>Cash Points</label>
    <summarizedField>FieloPLT__RedemptionItem__c.Cash_Points__c</summarizedField>
    <summaryFilterItems>
        <field>FieloPLT__RedemptionItem__c.FieloPLT__Status__c</field>
        <operation>notEqual</operation>
        <value>Reverted</value>
    </summaryFilterItems>
    <summaryForeignKey>FieloPLT__RedemptionItem__c.FieloPLT__Redemption__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>