force-app/main/default/objects/FieloPLT__Redemption__c/fields/Growth_Point__c.field-meta.xml
<CustomField>
    <fullName>Growth_Point__c</fullName>
    <label>Growth Points</label>
    <summarizedField>FieloPLT__RedemptionItem__c.Growth_Point__c</summarizedField>
    <summaryFilterItems>
        <field>FieloPLT__RedemptionItem__c.FieloPLT__Status__c</field>
        <operation>notEqual</operation>
        <value>Reverted</value>
    </summaryFilterItems>
    <summaryForeignKey>FieloPLT__RedemptionItem__c.FieloPLT__Redemption__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>