force-app/main/default/objects/FieloPLT__Redemption__c/fields/Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Item_Quantity__c</fullName>
    <label>Item Quantity</label>
    <summarizedField>FieloPLT__RedemptionItem__c.FieloPLT__Quantity__c</summarizedField>
    <summaryForeignKey>FieloPLT__RedemptionItem__c.FieloPLT__Redemption__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>